# grep-like-search-utility

./: CMakeLists.txt  Doxyfile.in  README.md  build.gradle  toolchain.cmake
dependencies/: doxygen.cmake  testing.cmake
examples/cities - Copy/: navigation.md
examples/cities - Copy/helsinki/: Tech Industry.txt  cafe culture.txt
examples/cities - Copy/new york/: Architecture.txt  Tech Industry.txt
examples/cities - Copy/paris/: Architecture.txt  cafe culture.txt
examples/cities/helsinki/: Architecture.txt
examples/cities/new york/: cafe culture.txt
examples/cities/paris/: Tech Industry.txt
include/: grepLikeUtility.hpp
src/: CMakelists.txt  grepLikeUtility.cpp  main.cpp
unitTests/: CMakeLists.txt  grepLikeUtilitytests.cpp
